cleaned css and fixed footer bug when use on mobile

--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -1,24 +1,35 @@
 label {
-    color: #cecece;
+  color: #cecece;
 }
 
 .contact {
+  &-form {
+    width: 100%;
+    color:#cecece;
+    margin: 0;
+    padding: 5vh 10vh 5vh 10vh;
+    min-height: 85vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
-    &-form {
-        width: 60vw;
-        margin: auto;
-        height: 60%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+  }
 }
 
 .btn {
-    background-color: rgb(63, 63, 63);
-    border: none;
+  background-color: rgb(63, 63, 63);
+  color: #cecece;
+  border: none;
+  align-self: center;
 }
-    
+
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 400px) {
+  /* Styles */
+  .contact {
+
+    &-form {
+      padding: 5vh 3vh 5vh 3vh;
+    }
+  
+  }
+}
