--- a/src/components/Cv/styles.scss
+++ b/src/components/Cv/styles.scss
@@ -1,115 +1,118 @@
 .cv {
-  width: 90%;
-  margin: 5vh auto 5vh auto;
-
-  &-body {
-    margin-top: 8vh;
-  }
-
-  &-maintitle {
-    color: #b8b8b8;
-    flex: 5;
-  }
-
-  &-subtitle {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-top: 2vh;
-    flex: 1;
-
-    &-element {
-      color: rgb(105, 105, 105);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      align-items: center;
-    }
-  }
+  width: 100%;
+  margin: 0;
+  padding: 5vh 3vh 5vh 3vh;
+  min-height: 85vh;
 
   &-header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-  }
 
-  &-photo {
-    min-width: 100px;
-    max-width: 10vw;
-    height: auto;
+    &-photo {
+      min-width: 100px;
+      max-width: 10vw;
+      height: auto;
+      
+      -webkit-box-shadow: 0px 0px 21px 0px rgba(184,184,184,1);
+      -moz-box-shadow: 0px 0px 21px 0px rgba(184,184,184,1);
+      box-shadow: 0px 0px 21px 0px rgba(184,184,184,1);
+      margin-bottom: 2vh;
+    }
+
+    &-maintitle {
+      color: #b8b8b8;
+      flex: 5;
+    }
+
     
-    -webkit-box-shadow: 0px 0px 21px 0px rgba(184,184,184,1);
-    -moz-box-shadow: 0px 0px 21px 0px rgba(184,184,184,1);
-    box-shadow: 0px 0px 21px 0px rgba(184,184,184,1);
-    margin-bottom: 2vh;
+    &-subtitle {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      margin-top: 2vh;
+      flex: 1;
+
+      &-element {
+        color: rgb(105, 105, 105);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+    }
+
+    &-techno-logo {
+      width: auto;
+      height: 5vh;
+    }
+
   }
 
-  &-experiences {
+  &-body {
+    margin-top: 8vh;
 
-    color: #cecece;
+    &-experiences {
 
-    &-item {
       color: #cecece;
-      margin: 4vh auto 4vh auto;
-    }
+  
+      &-item {
+        color: #cecece;
+        margin: 4vh auto 4vh auto;
+      }
+  
+      &-description {
+        margin: 0;
+      }
+    } 
 
-    &-description {
-      margin: 0;
-    }
-  } 
+    &-education {
 
-  &-education {
-
-    color: #cecece;
-
-    &-item {
       color: #cecece;
-      margin: 4vh auto 4vh auto;
-    }
+  
+      &-item {
+        color: #cecece;
+        margin: 4vh auto 4vh auto;
+      }
+  
+      &-description {
+        margin: 0;
+      }
+    } 
 
-    &-description {
-      margin: 0;
-    }
-  } 
+    &-hobbies {
 
-  &-hobbies {
-
-    color: #cecece;
-
-    &-item {
       color: #cecece;
-      margin: 4vh auto 4vh auto;
-    }
+  
+      &-item {
+        color: #cecece;
+        margin: 4vh auto 4vh auto;
+      }
+  
+      &-description {
+        margin: 0;
+      }
+    } 
 
-    &-description {
-      margin: 0;
-    }
-  } 
+    &-languages {
 
-  &-languages {
-
-    color: #cecece;
-
-    &-item {
       color: #cecece;
-      margin: 4vh auto 4vh auto;
-    }
-
-    &-name {
-      margin: 1vh;
-    }
-
-    &-progressbar {
-      width: 30vw;
-    }
-  } 
-
-}
-
-.techno-logo {
-  width: auto;
-  height: 5vh;
+  
+      &-item {
+        color: #cecece;
+        margin: 4vh auto 4vh auto;
+      }
+  
+      &-name {
+        margin: 1vh;
+      }
+  
+      &-progressbar {
+        width: 30vw;
+      }
+    } 
+  }
 }
 
 @media only screen and (max-width : 575px) {
