--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,4 +1,6 @@
 .footer {
+  position: relative;
+  bottom: 0px;
   width: 100%;
   background: rgb(63, 63, 63);
   &-copyright {
